kubernetes/apps/default/firefly-iii/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefly-iii-external
  labels:
    app.kubernetes.io/name: firefly-iii
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - firefly.iacob.co.uk
  rules:
    - backendRefs:
        - name: firefly-iii
          port: 8080
